--- a/config/cicd/base/07-templates/app-ci-build-from-push-template.yaml
+++ b/config/cicd/base/07-templates/app-ci-build-from-push-template.yaml
@@ -31,7 +31,7 @@ spec:
     kind: PipelineRun
     metadata:
       creationTimestamp: null
-      name: app-ci-pipeline-run-$(uid)
+      name: app-ci-$(uid)
     spec:
       params:
       - name: REPO
