--- a/config/cicd/base/07-eventlisteners/cicd-event-listener.yaml
+++ b/config/cicd/base/07-eventlisteners/cicd-event-listener.yaml
@@ -56,6 +56,30 @@ spec:
     name: app-ci-build-from-push-taxi
     template:
       ref: app-ci-template
+  - bindings:
+    - ref: stage-full-stack-frontend-service-binding
+    - ref: github-push-binding
+    interceptors:
+    - params:
+      - name: secretRef
+        value:
+          secretKey: webhook-secret-key
+          secretName: webhook-secret-stage-frontend-service
+      ref:
+        name: github
+    - params:
+      - name: filter
+        value: (header.match('X-GitHub-Event', 'push') && body.repository.full_name
+          == 'ishitasequeira/frontend-service')
+      - name: overlays
+        value:
+        - expression: body.ref.split('/')[2]
+          key: ref
+      ref:
+        name: cel
+    name: app-ci-build-from-push-frontend-service
+    template:
+      ref: app-ci-template
 status:
   configuration:
     generatedName: ""
