--- a/config/cicd/base/kustomization.yaml
+++ b/config/cicd/base/kustomization.yaml
@@ -1,6 +1,8 @@
 resources:
 - 01-namespaces/cicd-environment.yaml
+- 01-namespaces/gitops-environment.yaml
 - 02-rolebindings/argocd-admin.yaml
+- 02-rolebindings/internal-registry-gitops-binding.yaml
 - 02-rolebindings/pipeline-service-account.yaml
 - 02-rolebindings/pipeline-service-role.yaml
 - 02-rolebindings/pipeline-service-rolebinding.yaml
@@ -10,6 +12,7 @@ resources:
 - 04-pipelines/ci-dryrun-from-push-pipeline.yaml
 - 05-bindings/dev-app-taxi-taxi-binding.yaml
 - 05-bindings/github-push-binding.yaml
+- 05-bindings/stage-full-stack-frontend-service-binding.yaml
 - 06-templates/app-ci-build-from-push-template.yaml
 - 06-templates/ci-dryrun-from-push-template.yaml
 - 07-eventlisteners/cicd-event-listener.yaml
