--- a/pipelines.yaml
+++ b/pipelines.yaml
@@ -24,6 +24,25 @@ environments:
       bindings:
       - github-push-binding
       template: app-ci-template
-- name: stage
+- apps:
+  - name: full-stack
+    services:
+    - name: frontend-service
+      pipelines:
+        integration:
+          bindings:
+          - stage-full-stack-frontend-service-binding
+          - github-push-binding
+      source_url: https://github.com/ishitasequeira/frontend-service.git
+      webhook:
+        secret:
+          name: webhook-secret-stage-frontend-service
+          namespace: cicd
+  name: stage
+  pipelines:
+    integration:
+      bindings:
+      - github-push-binding
+      template: app-ci-template
 gitops_url: https://github.com/ishitasequeira/gitops.git
 version: 1
