--- a/environments/dev/apps/app-openshift-taxi/services/openshift-taxi/base/config/300-route.yaml
+++ b/environments/dev/apps/app-openshift-taxi/services/openshift-taxi/base/config/300-route.yaml
@@ -2,13 +2,13 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   creationTimestamp: null
-  name: frontend-service
-  namespace: stage
+  name: openshift-taxi
+  namespace: dev
 spec:
   port:
     targetPort: http
   to:
     kind: Service
-    name: frontend-service
+    name: openshift-taxi
     weight: 100
   wildcardPolicy: None
