--- a/config/argocd/dev-app-openshift-taxi-app.yaml
+++ b/config/argocd/dev-app-openshift-taxi-app.yaml
@@ -3,16 +3,16 @@ kind: Application
 metadata:
   creationTimestamp: null
   labels:
-    app.kubernetes.io/name: full-stack
-  name: stage-full-stack
+    app.kubernetes.io/name: app-openshift-taxi
+  name: dev-app-openshift-taxi
   namespace: openshift-gitops
 spec:
   destination:
-    namespace: stage
+    namespace: dev
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: environments/stage/apps/full-stack/overlays
+    path: environments/dev/apps/app-openshift-taxi/overlays
     repoURL: https://github.com/jkeam/openshift-gitops.git
   syncPolicy:
     automated:
