--- a/config/cicd/base/kustomization.yaml
+++ b/config/cicd/base/kustomization.yaml
@@ -8,8 +8,10 @@ resources:
 - 03-tasks/set-commit-status-task.yaml
 - 04-pipelines/app-ci-pipeline.yaml
 - 04-pipelines/ci-dryrun-from-push-pipeline.yaml
+- 05-bindings/dev-app-openshift-taxi-openshift-taxi-binding.yaml
 - 05-bindings/dev-app-taxi-taxi-binding.yaml
 - 05-bindings/github-push-binding.yaml
+- 05-bindings/stage-full-stack-backend-service-binding.yaml
 - 05-bindings/stage-full-stack-frontend-service-binding.yaml
 - 06-templates/app-ci-build-from-push-template.yaml
 - 06-templates/ci-dryrun-from-push-template.yaml
