--- a/environments/dev/apps/app-openshift-taxi/services/openshift-taxi/base/config/100-deployment.yaml
+++ b/environments/dev/apps/app-openshift-taxi/services/openshift-taxi/base/config/100-deployment.yaml
@@ -3,28 +3,28 @@ kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    app.kubernetes.io/name: frontend-service
-    app.kubernetes.io/part-of: full-stack
-  name: frontend-service
-  namespace: stage
+    app.kubernetes.io/name: openshift-taxi
+    app.kubernetes.io/part-of: app-openshift-taxi
+  name: openshift-taxi
+  namespace: dev
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: frontend-service
-      app.kubernetes.io/part-of: full-stack
+      app.kubernetes.io/name: openshift-taxi
+      app.kubernetes.io/part-of: app-openshift-taxi
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app.kubernetes.io/name: frontend-service
-        app.kubernetes.io/part-of: full-stack
+        app.kubernetes.io/name: openshift-taxi
+        app.kubernetes.io/part-of: app-openshift-taxi
     spec:
       containers:
       - image: nginxinc/nginx-unprivileged:latest
         imagePullPolicy: Always
-        name: frontend-service
+        name: openshift-taxi
         ports:
         - containerPort: 8080
         resources: {}
