--- a/environments/stage/apps/full-stack/services/backend-service/base/config/300-route.yaml
+++ b/environments/stage/apps/full-stack/services/backend-service/base/config/300-route.yaml
@@ -2,13 +2,13 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   creationTimestamp: null
-  name: frontend-service
+  name: backend-service
   namespace: stage
 spec:
   port:
     targetPort: http
   to:
     kind: Service
-    name: frontend-service
+    name: backend-service
     weight: 100
   wildcardPolicy: None
