--- a/environments/stage/env/base/stage-environment.yaml
+++ b/environments/stage/env/base/stage-environment.yaml
@@ -2,8 +2,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    app.openshift.io/vcs-uri: https://github.com/ishitasequeira/gitops.git?ref=HEAD
+    app.openshift.io/vcs-uri: https://github.com/jkeam/openshift-gitops.git?ref=HEAD
   creationTimestamp: null
+  labels:
+    argocd.argoproj.io/managed-by: openshift-gitops
   name: stage
 spec: {}
 status: {}
