--- a/config/cicd/base/04-pipelines/app-ci-pipeline.yaml
+++ b/config/cicd/base/04-pipelines/app-ci-pipeline.yaml
@@ -42,6 +42,11 @@ spec:
     type: string
   - name: GIT_REPO
     type: string
+  resources:
+  - name: source-repo
+    type: git
+  - name: runtime-image
+    type: image
   tasks:
   - name: set-pending-status
     params:
@@ -72,6 +77,16 @@ spec:
     workspaces:
     - name: output
       workspace: shared-data
+  - name: go-ci
+    resources:
+      inputs:
+      - name: source
+        resource: source-repo
+    runAfter:
+    - clone-source
+    taskRef:
+      kind: Task
+      name: go-test
   - name: build-image
     params:
     - name: TLSVERIFY
@@ -83,7 +98,7 @@ spec:
     - name: IMAGE
       value: $(params.IMAGE)
     runAfter:
-    - clone-source
+    - go-ci
     taskRef:
       kind: ClusterTask
       name: buildah
