--- a/environments/dev/apps/app-taxi/kustomization.yaml
+++ b/environments/dev/apps/app-taxi/kustomization.yaml
@@ -1,4 +1,4 @@
 bases:
 - overlays
 commonLabels:
-  app.openshift.io/vcs-source: ishitasequeira/gitops
+  app.openshift.io/vcs-source: jkeam/openshift-gitops
